--- a/src/templates/inc/messages.html
+++ b/src/templates/inc/messages.html
@@ -1,5 +1,5 @@
 {% if messages %}
     {% for messages in messages %}
-        <p class="alert alert-{% messages.tags %}"></p>
+        <p class="alert alert-{{ messages.tags }}"></p>
     {% endfor %}
 {% endif %}
