--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p> {{ post.user }} | {{ post.created|date }}</p>
-    <p> {{ post.body }}</p>
+    <div class="text-right">
+        <p> {{ post.user }} | {{ post.created|date }}</p>
+        <p> {{ post.body }}</p>
+    </div>
 {% endblock %}
