--- a/src/templates/inc/navbar.html
+++ b/src/templates/inc/navbar.html
@@ -6,8 +6,12 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-link active" href="{% url 'posts:all_posts' %}">صفحه اصلی <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">ثبت نام</a>
-            <a class="nav-link" href="#">ورود</a>
+            {% if request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'account:Logout' %}">خروج</a>
+            {% else %}
+                <a class="nav-link" href="{% url 'account:register' %}">ثبت نام</a>
+                <a class="nav-link" href="{% url 'account:Login' %}">ورود</a>
+            {% endif %}
         </div>
 {#        <form class="form-inline" action="#">#}
 {#            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">#}
