develop template / create category for posts / extend bio & age for profile

--- a/src/posts/templates/posts/all_posts.html
+++ b/src/posts/templates/posts/all_posts.html
@@ -4,7 +4,8 @@
 
 {% block content %}
     {% for post in posts %}
-        <div dir='rtl' class="row">
+        <br>
+        <div dir='rtl' class="d-flex justify-content-center">
             <div class="col-6">
                 <div class="card text-right">
                     <p class="card-header"> {{ post.user }}</p>
