--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="text-right">
+    <div class="jumbotron text-right">
         <p> {{ post.user }} | {{ post.created|date }}</p>
         <p> {{ post.body }}</p>
     </div>
