--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -1,16 +1,36 @@
-<nav class="jumbotron text-center">
-    <ul class="nav nav-tabs flex-column">
-        <li class="nav-item">
-            <a class="nav-link" href="#">دسته بندی سوالات</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">پروفایل</a>
-        </li>
-        <li class="nav-item">
-            <form dir="rtl" class="form-inline" action="#">
-                <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">
-                <button class="btn btn-success" type="submit">بگرد</button>
-            </form>
-        </li>
-    </ul>
-</nav>
+{#<nav class="jumbotron text-center">#}
+{#    <ul class="nav nav-tabs flex-column">#}
+{#        <li class="nav-item">#}
+{#            <a class="nav-link" href="#">دسته بندی سوالات</a>#}
+{#        </li>#}
+{#        <li class="nav-item">#}
+{#            <a class="nav-link" href="#">پروفایل</a>#}
+{#        </li>#}
+{#        <li class="nav-item">#}
+{#            <form dir="rtl" class="form-inline" action="#">#}
+{#                <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">#}
+{#                <button class="btn btn-success" type="submit">بگرد</button>#}
+{#            </form>#}
+{#        </li>#}
+{#    </ul>#}
+{#</nav>#}
+
+<!-- Sidebar -->
+        <nav dir="rtl" class="navbar-dark" style="background-color: lightgrey; height: 250px">
+            <br><br>
+            <div class='sidebar-nav' id="navbarNavAltMarkup">
+                <ul class="text-right" style="list-style-type: none">
+                    <li> <a class="nav-link text-dark" href="#">دسته بندی سوالات</a> </li>
+                    <li> <a class="nav-link text-dark" href="#">کاربران</a> </li>
+{#                    <li> <a class="nav-link text-dark" href="#">Shortcuts</a> </li>#}
+{#                    <li> <a class="nav-link text-dark" href="#">Overview</a> </li>#}
+                    <li class="nav-item">
+                        <form dir="rtl" class="form-inline" action="#">
+                            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">
+                            <button class="btn btn-success" type="submit">بگرد</button>
+                        </form>
+                        <br>
+                    </li>
+                </ul>
+            </div> <!-- /#sidebar-wrapper -->
+        </nav> <!-- /#wrapper -->
