--- a/src/account/templates/account/register.html
+++ b/src/account/templates/account/register.html
@@ -1,28 +1,28 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Register</title>
+    <title>ثبت نام</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body class="bg-info">
-<div class="container">
+<body class="bg-dark">
+<div class="container text-white">
     <div class="row">
         <div class="col-md-12">
             <br>
             <h2 class="text-center">
                 ثبت نام
             </h2>
-            <hr>
+            <hr color="white">
             <div class="row justify-content-center">
                 <div class="col-md-6 col-md-offset-3">
                    <form action="" method="post" novalidate>
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <input type="submit" value="ثبت نام" class="btn btn-warning">
+                        <input type="submit" value="ثبت نام" class="btn btn-success">
                     </form>
-                    <hr>
+                    <hr color="white">
                 </div>
             </div>
         </div>
