--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>وبسایت پرسش و پاسخ</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-md-9">
-            <div class="jumbotron">
+            <div>
                 {% include 'inc/messages.html' %}
             
                 {% block content %}
