--- a/src/templates/inc/navbar.html
+++ b/src/templates/inc/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-info" dir="rtl">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-3 pb-3" dir="rtl">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
