--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -16,13 +16,13 @@
 {#</nav>#}
 
 <!-- Sidebar -->
-        <nav dir="rtl" class="navbar-dark" style="background-color: lightgrey; height: 250px">
+        <nav dir="rtl" class="navbar-dark" style="background-color: #ce6262; height: 250px">
             <br><br>
             <div class='sidebar-nav' id="navbarNavAltMarkup">
                 <ul class="text-right" style="list-style-type: none">
                     <li dir="ltr">
                         <div class="btn-group dropleft">
-                          <button type="button" class="btn dropdown-toggle text-dark" data-toggle="dropdown">
+                          <button type="button" class="btn dropdown-toggle text-white" data-toggle="dropdown">
                             دسته بندی سوالات
                           </button>
                           <div class="dropdown-menu text-center">
@@ -39,7 +39,7 @@
                           </div>
                         </div>
                     </li>
-                    <li> <a class="nav-link text-dark" href="#">کاربران</a> </li>
+                    <li> <a class="nav-link text-white" href="#">کاربران</a> </li>
 {#                    <li> <a class="nav-link text-dark" href="#">Shortcuts</a> </li>#}
 {#                    <li> <a class="nav-link text-dark" href="#">Overview</a> </li>#}
                     <li class="nav-item">
