--- a/src/posts/templates/posts/all_posts.html
+++ b/src/posts/templates/posts/all_posts.html
@@ -6,11 +6,14 @@
     {% for post in posts %}
         <br>
         <div dir='rtl' class="d-flex justify-content-center">
-            <div class="col-6">
-                <div class="card text-right">
-                    <p class="card-header"> {{ post.user }}</p>
-                    <p class="card-body"><a href="{{ post.get_absolute_url }}"> {{ post.body }} </a></p>
-            {#اطلاعات از جدول دیتابیس post واکشی میشوند#}
+            <div class="col-9">
+                <div class="card text-right" style="background-color: #eeeeee">
+                    <p class="card-header bg-white"><a href="{% url 'account:dashboard' post.user.id %}"> {{ post.user }} </a></p>
+                    <p class="card-body" style="width: 400px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis">
+                        {{ post.body }}
+                    </p>
+                    {#اطلاعات از جدول دیتابیس post واکشی میشوند#}
+                    <button class="col-4 btn bg-info" type='button'><a class="text-white" href="{{ post.get_absolute_url }}"> رفتن به سوال</a></button>
                 </div>
             </div>
         </div>
