--- a/src/templates/inc/messages.html
+++ b/src/templates/inc/messages.html
@@ -1,5 +1,15 @@
 {% if messages %}
-    {% for messages in messages %}
-        <p class="alert alert-{{ messages.tags }}"></p>
+{#    {% for messages in messages %}#}
+{#        <p class="alert alert-{{ messages.tags }}"></p>#}
+{#    {% endfor %}#}
+    {% for message in messages %}
+        <div class="container-fluid p-0">
+          <div class="alert {{ message.tags }} alert-dismissible text-center" role="alert" >
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+          </div>
+        </div>
     {% endfor %}
 {% endif %}
