--- a/src/posts/templates/posts/category/eghtesadi.html
+++ b/src/posts/templates/posts/category/eghtesadi.html
@@ -6,22 +6,21 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-    <br><h4 class="text-center">سوالات اقتصادی</h4><hr>
+    <br><h4 class="text-center">سوالات اقتصادی</h4><hr><br>
     {% for post in posts %}
-        <br>
-        <div dir='rtl' class="d-flex justify-content-center">
-            <div class="col-9">
-                {% ifequal post.category '2' %}
-                <div class="card text-right" style="background-color: #eeeeee">
-                    <p class="card-header bg-white"><a href="{% url 'account:dashboard' post.user.id %}"> {{ post.user }} </a></p>
-                    <p class="card-body" style="width: 400px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis">
-                        {{ post.body }}
-                    </p>
-                    <button class="col-4 btn bg-info" type='button'><a class="text-white" href="{{ post.get_absolute_url }}"> رفتن به سوال</a></button>
+        {% ifequal post.category '2' %}
+            <div dir='rtl' class="d-flex justify-content-center">
+                <div class="col-9">
+                    <div class="card text-right" style="background-color: #eeeeee">
+                        <p class="card-header bg-white"><a href="{% url 'account:dashboard' post.user.id %}"> {{ post.user }} </a></p>
+                        <p class="card-body" style="width: 400px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis">
+                            {{ post.body }}
+                        </p>
+                        <button class="col-4 btn bg-info" type='button'><a class="text-white" href="{{ post.get_absolute_url }}"> رفتن به سوال</a></button>
+                    </div>
                 </div>
-                {% endifequal %}
-            </div>
-        </div>
+            </div><br>
+        {% endifequal %}
 
     {% endfor %}
 
