create AddReplyForm & add_reply in views.py / create all_account page

--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -39,9 +39,8 @@
                           </div>
                         </div>
                     </li>
-                    <li> <a class="nav-link text-white" href="#">کاربران</a> </li>
+                    <li> <a class="nav-link text-white" href="{% url 'account:all_account' %}">کاربران</a> </li>
 {#                    <li> <a class="nav-link text-dark" href="#">Shortcuts</a> </li>#}
-{#                    <li> <a class="nav-link text-dark" href="#">Overview</a> </li>#}
                     <li class="nav-item">
                         <form dir="rtl" class="form-inline" action="#">
                             <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">
