create EditProfileForm & edit_profile views

--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -44,7 +44,7 @@
         {% endif %}
         <br><br>
         {% for comment in comments %}
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white m-5 p-3">
                 <p class="card-header">{{ comment.user }}</p>
                 <p class="card-body">{{ comment.body }}</p>
                 <p class="card-body text-left"
