--- a/src/account/templates/account/dashboard.html
+++ b/src/account/templates/account/dashboard.html
@@ -15,6 +15,9 @@
                   <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                 </svg><span> پرسش جدید</span>
             </a>
+            <a class="btn btn-secondary ml-2" href="{% url 'account:edit_profile' request.user.id %}">
+                ویرایش پروفایل
+            </a>
             {% endif %}
         </div><br><br>
         {% for post in posts %}
