--- a/src/templates/inc/navbar.html
+++ b/src/templates/inc/navbar.html
@@ -8,6 +8,7 @@
             <a class="nav-link active" href="{% url 'posts:all_posts' %}">صفحه اصلی <span class="sr-only">(current)</span></a>
             {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'account:Logout' %}">خروج</a>
+                <a class="nav-link" href="{% url 'account:dashboard' user.id %}">پروفایل</a>
             {% else %}
                 <a class="nav-link" href="{% url 'account:register' %}">ثبت نام</a>
                 <a class="nav-link" href="{% url 'account:Login' %}">ورود</a>
