--- a/src/templates/inc/navbar.html
+++ b/src/templates/inc/navbar.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-link active" href="{% url 'posts:all_posts' %}">صفحه اصلی <span class="sr-only">(current)</span></a>
+            <a class="nav-link active" href="{% url 'posts:all_posts' %}">پرسش و پاسخ <span class="sr-only">(current)</span></a>
             {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'account:Logout' %}">خروج</a>
                 <a class="nav-link" href="{% url 'account:dashboard' user.id %}">پروفایل</a>
