--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -40,10 +40,9 @@
                         </div>
                     </li>
                     <li> <a class="nav-link text-white" href="{% url 'account:all_account' %}">کاربران</a> </li>
-{#                    <li> <a class="nav-link text-dark" href="#">Shortcuts</a> </li>#}
                     <li class="nav-item">
-                        <form dir="rtl" class="form-inline" action="#">
-                            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">
+                        <form dir="rtl" class="form-inline mt-2" action="{% url 'posts:all_posts' %}">
+                            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو" name="query-search">
                             <button class="btn btn-success" type="submit">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
