--- a/src/account/templates/account/dashboard.html
+++ b/src/account/templates/account/dashboard.html
@@ -3,17 +3,17 @@
 {% block title %} {{ user.username }} profile {% endblock %}
 
 {% block content %}
-    <div class="jumbotron">
+    <div class="jumbotron" dir="rtl">
         <h4 class="text-center">{{ user.username|capfirst }}</h4><br>
 {#        <p class="text-right" style="display: inline"> {{ user.profile.bio }} </p>#}
 {#        <p style="display: inline" align="right">اضافه</p>#}
         <div style="overflow: hidden;">
-            <p style="float: right;">{{ user.profile.bio }}</p>
+            {% if user.profile.bio %}
+                <p style="float: right;">{{ user.profile.bio }}</p>
+            {% endif %}
             {% if self_dash %}
             <a class="btn btn-info" href="{% url 'posts:add_post' request.user.id %}" style="float: left;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus" viewBox="0 0 14 18">
-                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                </svg><span> پرسش جدید</span>
+                پرسش جدید
             </a>
             <a class="btn btn-secondary ml-2" href="{% url 'account:edit_profile' request.user.id %}">
                 ویرایش پروفایل
