--- a/src/account/templates/account/register.html
+++ b/src/account/templates/account/register.html
@@ -1,12 +1,16 @@
+{% load static %}
 <html>
 <head>
     <meta charset="UTF-8">
     <title>ثبت نام</title>
-
+    
+    <link rel="shortcut icon" href="{% static 'images/question-icon.svg' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark" style="background-image: url({% static 'images/question-mark.jpg' %})">
 <div class="container text-white">
     <div class="row">
         <div class="col-md-12">
@@ -23,6 +27,7 @@
                         <input type="submit" value="ثبت نام" class="btn btn-success">
                     </form>
                     <hr color="white">
+                    {% include 'inc/messages.html' %}
                 </div>
             </div>
         </div>
