--- a/src/posts/templates/posts/add_post.html
+++ b/src/posts/templates/posts/add_post.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="jumbotron"> <br>
+    <div class="jumbotron">
+        <h3 class="text-center" style="margin-top: -16px">پرسش جدید</h3><br>
         <form action="" method="post" class="text-center" dir="rtl">
             {% csrf_token %}
             {{ form.as_p }}
