--- a/src/templates/inc/navbar.html
+++ b/src/templates/inc/navbar.html
@@ -1,22 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-3 pb-3" dir="rtl">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-link active" href="{% url 'posts:all_posts' %}">پرسش و پاسخ <span class="sr-only">(current)</span></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-3 pb-3">
+{#    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"#}
+{#            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">#}
+{#        <span class="navbar-toggler-icon"></span>#}
+{#    </button>#}
+    <div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2">
+        <div class="navbar-nav mr-auto">
+            {% if request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'account:dashboard' user.id %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
+                    <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                    <path fill-rule="evenodd" d="M15.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                    </svg>
+                </a>
+                <a class="nav-link" href="{% url 'posts:add_post' user.id %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </a>
+            {% endif %}
+        </div>
+    </div>
+    <div class="collapse navbar-collapse w-100 order-3 dual-collapse2">
+        <div class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'account:Logout' %}">خروج</a>
-                <a class="nav-link" href="{% url 'account:dashboard' user.id %}">پروفایل</a>
+{#                <a class="nav-link" href="{% url 'account:dashboard' user.id %}">پروفایل</a>#}
             {% else %}
                 <a class="nav-link" href="{% url 'account:register' %}">ثبت نام</a>
                 <a class="nav-link" href="{% url 'account:Login' %}">ورود</a>
             {% endif %}
+            <a class="nav-link active" style="font-size: 17px" href="{% url 'posts:all_posts' %}">پرسش و پاسخ <span class="sr-only">(current)</span></a>
         </div>
-{#        <form class="form-inline" action="#">#}
-{#            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو">#}
-{#            <button class="btn btn-success" type="submit">بگرد</button>#}
-{#        </form>#}
     </div>
 </nav>
