--- a/src/posts/templates/posts/all_posts.html
+++ b/src/posts/templates/posts/all_posts.html
@@ -10,6 +10,7 @@
                 <div class="card text-right" style="background-color: #eeeeee">
                     <p class="card-header bg-white">
                         <a href="{% url 'account:dashboard' post.user.id %}"> {{ post.user }} </a>
+{#                        <span> {{ post.category.0}}</span>#}
                         <span class="mt-1" style="float:left; font-size: 10px">{{ post.jcreated }}</span>
                     </p>
                     <p class="card-body"
