--- a/src/posts/templates/posts/add_post.html
+++ b/src/posts/templates/posts/add_post.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="jumbotron">
         <h3 class="text-center" style="margin-top: -16px">پرسش جدید</h3><br>
-        <form action="" method="post" class="text-center" dir="rtl">
+        <form action="" method="post" class="text-center" dir="rtl" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="ثبت پرسش جدید" class="btn btn-success">
