--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -24,6 +24,11 @@
             <p style="font-size: 14px; float: right; margin-left: 4px"> {{ post.user }} </p>
         </div>
         <p> {{ post.body }}</p>
+        {% if post.image %}
+            <a data-toggle="modal" data-target="#ImageModal">
+                <img style="border-radius: 15px;margin-left: auto;margin-right: auto; display: block; width: 650px; height: 500px" src="{{ post.image.url }}" class="img-fluid" alt="Responsive image">
+            </a>
+        {% endif %}
         <hr>
 
         <!-- Comment counter -->
@@ -31,6 +36,7 @@
             <p style="float: left; margin-right: 2px">پاسخ</p><span style="float:left;"> {{ total }} </span>
         {% endwith %}
 
+        <!-- Add Comment -->
         {% if request.user.is_authenticated %}
             <!-- Button trigger modal Comment-->
             <button style="float: right" type="button" class="btn btn-info" data-toggle="modal"
@@ -85,6 +91,7 @@
         {% empty %}
             <p class="text-center">پاسخی وجود ندارد</p>
         {% endfor %}
+        <!-- End Show Comment -->
 
         <!-- Modal Comment -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -110,5 +117,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal Image -->
+        {% if post.image %}
+        <div class="modal fade bd-example-modal-lg" id="ImageModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img style="width: 100%" src="{{ post.image.url }}" alt="Responsive image">
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
