Add Analog Clock in project / delete like after user again like / Add background image on project

--- a/src/account/templates/account/all_account.html
+++ b/src/account/templates/account/all_account.html
@@ -3,7 +3,7 @@
 {% block title %} all account {% endblock %}
 
 {% block content %}<br>
-    <table class="table table-striped text-center" dir="rtl" style="margin-left: 13px">
+    <table class="table table-striped text-center table-light" dir="rtl" style="margin-left: 13px">
       <thead>
         <tr>
           <th scope="col"></th>
