--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -67,11 +67,12 @@
                 {% if request.user.is_authenticated %}
 
                     <!-- Like comment -->
-                    <a class="text-white {% if can_like %} disabled {% endif %}" style="float:left; margin-left: 12px; margin-top: -4px" href="{% url 'posts:like_comment' post.id comment.id %}">
+                    <span style="margin-left: -10px">{{comment.likes_count}}</span>
+                    <a class="text-white btn {% if can_like %} disabled {% endif %}" style="float:left; margin-left: 8px; margin-top: -18px" href="{% url 'posts:like_comment' post.id comment.id %}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 20 20">
                         <path d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                         </svg>
-                    </a><span class="ml-0.5" style="">{{comment.likes_count}}</span>
+                    </a>
                 </div>
 
 {#                {% if request.user.is_authenticated %}#}
