--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -1,3 +1,305 @@
+<!-- Sidebar -->
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.clock {
+  width: 200px;
+  height: 200px;
+  margin-right: 70px;
+  margin-top: 40px;
+  border-radius: 50%;
+  background-image: url("https://i.postimg.cc/hjVspvcJ/clock.png");
+  background-color: #091921;
+  background-size: cover;
+  display: flex;
+  /*content: "";
+  height: 395px;
+  width: 550px;
+  background-color: #2a2f40;*/
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
+    inset 0 -15px 15px rgba(255, 255, 255, 0.05), 0 15px 15px rgba(0, 0, 0, 0.3),
+    inset 0 15px 15px rgba(0, 0, 0, 0.3);
+}
+/*align-items: center;
+  background-color: #ff6d39;
+  margin-left: 93px;*/
+.clock::before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50%;
+  z-index: 1000;
+}
+
+.hour,
+.min,
+.sec {
+  position: absolute;
+}
+/*align-items: center;
+  background-color: #ff6d39;
+  margin-left: 93px;*/
+.hr {
+  width: 100px;
+  height: 100px;
+}
+
+.mn {
+  width: 135px;
+  height: 135px;
+}
+
+.sc {
+  width: 150px;
+  height: 150px;
+}
+
+.hr,
+.mn,
+.sc {
+  display: flex;
+  justify-content: center;
+}
+/*align-items: center;
+  background-color: #ff6d39;
+  margin-left: 93px;*/
+.hr::before {
+  content: "";
+  width: 8px;
+  height: 80px;
+  background-color: #ff105e;
+  z-index: 100;
+  border-radius: 5px;
+}
+/*content: "";
+  height: 395px;
+  width: 550px;
+  background-color: #2a2f40;*/
+.mn::before {
+  content: "";
+  width: 6px;
+  height: 90px;
+  background-color: rgb(15, 105, 207);
+  z-index: 11;
+  border-radius: 5px;
+}
+/*align-items: center;
+  background-color: #ff6d39;
+  margin-left: 93px;*/
+.sc::before {
+  content: "";
+  width: 2px;
+  height: 140px;
+  background-color: #fff;
+  z-index: 10;
+  border-radius: 5px;
+}
+
+</style>
+</head>
+        <nav dir="rtl" class="navbar-dark" style="background-color: #ce6262; height: 530px">
+            <br><br>
+            <div class='sidebar-nav' id="navbarNavAltMarkup">
+                <ul class="text-right" style="list-style-type: none">
+                    <li dir="ltr">
+                        <div class="btn-group dropleft">
+                          <button type="button" class="btn dropdown-toggle text-white" data-toggle="dropdown">
+                            دسته بندی سوالات
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tag" viewBox="0 0 16 16">
+                                  <path d="M6 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-1 0a.5.5 0 1 0-1 0 .5.5 0 0 0 1 0z"/>
+                                  <path d="M2 1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 1 6.586V2a1 1 0 0 1 1-1zm0 5.586l7 7L13.586 9l-7-7H2v4.586z"/>
+                              </svg>
+                          </button>
+                          <div class="dropdown-menu text-center">
+                            <!-- Dropdown menu links -->
+                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:ejtemaei' %}">اجتماعی</a>
+                              <hr>
+                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:eghtesadi' %}">اقتصادی</a>
+                              <hr>
+                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:darsi' %}">درسی</a>
+                              <hr>
+                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:siyasi' %}">سیاسی</a>
+                              <hr>
+                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:farhango honar' %}">فرهنگ و هنر</a>
+                          </div>
+                        </div>
+                    </li>
+                    <li> <a class="nav-link text-white" href="{% url 'account:all_account' %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                        </svg> کاربران
+                    </a> </li>
+                    <li class="nav-item">
+                        <form dir="rtl" class="form-inline mt-2" action="{% url 'posts:all_posts' %}">
+                            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو" name="query-search">
+                            <button class="btn btn-success" type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                                </svg>
+                            </button>
+                        </form>
+                        <br>
+                    </li>
+                </ul>
+
+                <div>
+                    <!-- Online Clock -->
+                    <hr style="padding: 6px; width: 70%">
+                     <div class="clock">
+                       <div class="hour">
+                         <div class="hr" id="hr"></div>
+                       </div><!-- <i class="fa fa-search"></i>
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-shopping-cart"></i>-->
+                       <div class="min">
+                         <div class="mn" id="mn"></div>
+                       </div>
+                       <div class="sec">
+                         <div class="sc" id="sc"></div>
+                       </div>
+                     </div>
+                    <script>
+                     const deg = 6; //360deg / 60(min||sec) => 6
+                    const hr = document.querySelector("#hr");
+                    const mn = document.querySelector("#mn");
+                    const sc = document.querySelector("#sc");
+                    /*var digits = {};
+
+                        var positions = ['h1', 'h2', ':', 'm1', 'm2', ':', 's1', 's2' ];
+
+                        var digitHolder = clock.find('.digits');
+
+                        $.each(positions, function(){
+                    */
+                    setInterval(() => {
+                      let day = new Date();
+                      let hh = day.getHours() * 30; //360deg / 12 hour => 30
+                      let mm = day.getMinutes() * deg;
+                      let ss = day.getSeconds() * deg;
+                    /*var digits = {};
+
+                        var positions = ['h1', 'h2', ':', 'm1', 'm2', ':', 's1', 's2' ];
+
+                        var digitHolder = clock.find('.digits');
+
+                        $.each(positions, function(){
+                    */
+                      hr.style.transform = `rotateZ(${hh + mm / 12}deg)`;
+                      mn.style.transform = `rotateZ(${mm}deg)`;
+                      sc.style.transform = `rotateZ(${ss}deg)`;
+                    });
+
+                    </script>
+
+                    <!-- Online Clock2 -->
+{#                    <canvas id="canvas" width="200" height="200" style="margin-left: 80px; margin-top: 20px"></canvas>#}
+{##}
+{#                    <script>#}
+{#                    var canvas = document.getElementById("canvas");#}
+{#                    var ctx = canvas.getContext("2d");#}
+{#                    var radius = canvas.height / 2;#}
+{#                    ctx.translate(radius, radius);#}
+{#                    radius = radius * 0.90#}
+{#                    setInterval(drawClock, 1000);#}
+{##}
+{#                    function drawClock() {#}
+{#                      drawFace(ctx, radius);#}
+{#                      drawNumbers(ctx, radius);#}
+{#                      drawTime(ctx, radius);#}
+{#                    }#}
+{##}
+{#                    function drawFace(ctx, radius) {#}
+{#                      var grad;#}
+{#                      ctx.beginPath();#}
+{#                      ctx.arc(0, 0, radius, 0, 2*Math.PI);#}
+{#                      ctx.fillStyle = 'white';#}
+{#                      ctx.fill();#}
+{#                      grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);#}
+{#                      grad.addColorStop(0, '#333');#}
+{#                      grad.addColorStop(0.5, 'white');#}
+{#                      grad.addColorStop(1, '#333');#}
+{#                      ctx.strokeStyle = grad;#}
+{#                      ctx.lineWidth = radius*0.1;#}
+{#                      ctx.stroke();#}
+{#                      ctx.beginPath();#}
+{#                      ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);#}
+{#                      ctx.fillStyle = '#333';#}
+{#                      ctx.fill();#}
+{#                    }#}
+{##}
+{#                    function drawNumbers(ctx, radius) {#}
+{#                      var ang;#}
+{#                      var num;#}
+{#                      ctx.font = radius*0.15 + "px arial";#}
+{#                      ctx.textBaseline="middle";#}
+{#                      ctx.textAlign="center";#}
+{#                      for(num = 1; num < 13; num++){#}
+{#                        ang = num * Math.PI / 6;#}
+{#                        ctx.rotate(ang);#}
+{#                        ctx.translate(0, -radius*0.85);#}
+{#                        ctx.rotate(-ang);#}
+{#                        ctx.fillText(num.toString(), 0, 0);#}
+{#                        ctx.rotate(ang);#}
+{#                        ctx.translate(0, radius*0.85);#}
+{#                        ctx.rotate(-ang);#}
+{#                      }#}
+{#                    }#}
+{##}
+{#                    function drawTime(ctx, radius){#}
+{#                        var now = new Date();#}
+{#                        var hour = now.getHours();#}
+{#                        var minute = now.getMinutes();#}
+{#                        var second = now.getSeconds();#}
+{#                        //hour#}
+{#                        hour=hour%12;#}
+{#                        hour=(hour*Math.PI/6)+#}
+{#                        (minute*Math.PI/(6*60))+#}
+{#                        (second*Math.PI/(360*60));#}
+{#                        drawHand(ctx, hour, radius*0.5, radius*0.07);#}
+{#                        //minute#}
+{#                        minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));#}
+{#                        drawHand(ctx, minute, radius*0.8, radius*0.07);#}
+{#                        // second#}
+{#                        second=(second*Math.PI/30);#}
+{#                        drawHand(ctx, second, radius*0.9, radius*0.02);#}
+{#                    }#}
+{##}
+{#                    function drawHand(ctx, pos, length, width) {#}
+{#                        ctx.beginPath();#}
+{#                        ctx.lineWidth = width;#}
+{#                        ctx.lineCap = "round";#}
+{#                        ctx.moveTo(0,0);#}
+{#                        ctx.rotate(pos);#}
+{#                        ctx.lineTo(0, -length);#}
+{#                        ctx.stroke();#}
+{#                        ctx.rotate(-pos);#}
+{#                    }#}
+{#                    </script>#}
+{#                    <p class="text-center text-white" style="margin-bottom: 20px">پرسش های پربازدید/p>#}
+{#                    <div dir="rtl" class="card text-right" style=" width: 80%; margin-left: auto;margin-right: auto;">#}
+{#                        <table class="table table-striped text-center" dir="rtl" style="margin-left: 13px">#}
+{#                          <tbody class="text-dark">#}
+{#                            <tr class="text-center">#}
+{#                              <td>بیشترین بازدید ها<small style="float: left; margin-top: 5px"></small></td>#}
+{#                            </tr>#}
+{#                            {% for post in posts %}#}
+{#                                <tr class="text-right">#}
+{#                                  <td><a href="{{ post.get_absolute_url }}">{{ post.body }}</a><small style="float: left; margin-top: 5px">{{ post.views }}</small></td>#}
+{#                                </tr>#}
+{#                            {% endfor %}#}
+{#                          </tbody>#}
+{#                        </table>#}
+{#                    </div>#}
+                </div>
+            </div> <!-- /#sidebar-wrapper -->
+        </nav> <!-- /#wrapper -->
+
+
+
 {#<nav class="jumbotron text-center">#}
 {#    <ul class="nav nav-tabs flex-column">#}
 {#        <li class="nav-item">#}
@@ -14,43 +316,3 @@
 {#        </li>#}
 {#    </ul>#}
 {#</nav>#}
-
-<!-- Sidebar -->
-        <nav dir="rtl" class="navbar-dark" style="background-color: #ce6262; height: 250px">
-            <br><br>
-            <div class='sidebar-nav' id="navbarNavAltMarkup">
-                <ul class="text-right" style="list-style-type: none">
-                    <li dir="ltr">
-                        <div class="btn-group dropleft">
-                          <button type="button" class="btn dropdown-toggle text-white" data-toggle="dropdown">
-                            دسته بندی سوالات
-                          </button>
-                          <div class="dropdown-menu text-center">
-                            <!-- Dropdown menu links -->
-                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:ejtemaei' %}">اجتماعی</a>
-                              <hr>
-                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:eghtesadi' %}">اقتصادی</a>
-                              <hr>
-                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:darsi' %}">درسی</a>
-                              <hr>
-                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:siyasi' %}">سیاسی</a>
-                              <hr>
-                              <a class="text-dark" style="text-decoration: none" href="{% url 'posts:farhango honar' %}">فرهنگ و هنر</a>
-                          </div>
-                        </div>
-                    </li>
-                    <li> <a class="nav-link text-white" href="{% url 'account:all_account' %}">کاربران</a> </li>
-                    <li class="nav-item">
-                        <form dir="rtl" class="form-inline mt-2" action="{% url 'posts:all_posts' %}">
-                            <input class="form-control mr-sm-2" type="search" placeholder="جست و جو" name="query-search">
-                            <button class="btn btn-success" type="submit">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                                </svg>
-                            </button>
-                        </form>
-                        <br>
-                    </li>
-                </ul>
-            </div> <!-- /#sidebar-wrapper -->
-        </nav> <!-- /#wrapper -->
